# DevOps-Labs

./: .gitignore  README.md
Kubernetes/: README.md
Kubernetes/Lab0/: .gitignore  README.md
Kubernetes/Lab0/app/: .env.local  (+6 more)
Kubernetes/Lab0/app/backend/: Dockerfile  alembic.ini  pyproject.toml
Kubernetes/Lab0/app/backend/alembic/: env.py
Kubernetes/Lab0/app/backend/alembic/versions/: 0001_initial_store_schema.py
Kubernetes/Lab0/app/backend/app/: __init__.py  main.py
Kubernetes/Lab0/app/backend/app/api/: dependencies.py  router.py
Kubernetes/Lab0/app/backend/app/core/: config.py  errors.py  logging.py  security.py
Kubernetes/Lab0/app/backend/app/db/: health.py  seed.py  session.py
Kubernetes/Lab0/app/backend/app/modules/admin/: models.py  router.py  schemas.py
Kubernetes/Lab0/app/backend/app/modules/carts/: __init__.py  models.py  router.py  schemas.py  service.py
Kubernetes/Lab0/app/backend/app/modules/health/: router.py
Kubernetes/Lab0/app/backend/app/modules/inventory/: models.py  router.py  schemas.py  service.py
Kubernetes/Lab0/app/backend/app/modules/orders/: models.py  router.py  schemas.py  service.py
Kubernetes/Lab0/app/backend/app/modules/payments/: models.py  router.py  schemas.py  service.py
Kubernetes/Lab0/app/backend/app/modules/products/: models.py  router.py  schemas.py  service.py
Kubernetes/Lab0/app/backend/app/modules/users/: models.py  router.py  schemas.py  service.py
Kubernetes/Lab0/app/backend/app/worker/: celery_app.py  tasks.py
Kubernetes/Lab1/: AGENTS.md  README.md
Observability/VictoriaMetrics/: README.md
(+52 files in other folders)
